[package]
name = "wg-mesh"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
ipnet = "2.12.0"
netlink-packet-core = "0.7.0"
nix = "0.31.2"
resolv-conf = "0.7.6"
rsdns = { version = "0.21.0", features = [ "net-tokio" ] }
rtnetlink = "0.13.1"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
wireguard-control = "1.7.1"
