[package]
name = "wg-mesh"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive", "env"] }
futures = "0.3.32"
hickory-resolver = "0.26.1"
ipnet = "2.12.0"
netlink-packet-core = "0.8.1"
nix = "0.31.3"
rtnetlink = "0.21.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
wireguard-control = "1.7.1"
